--- a/static/index.html
+++ b/static/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Simple WebRTC Call</title>
-<style>
-  video {
-    width: 45%;
-    margin: 10px;
-    border: 1px solid black;
-  }
-  button {
-    margin: 10px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>WebRTC Audio/Video Call</title>
+  <style>
+    video {
+      width: 45%;
+      margin: 10px;
+      border: 1px solid black;
+    }
+    button, select {
+      margin: 10px;
+      padding: 6px 12px;
+    }
+  </style>
 </head>
 <body>
 
-<h2>WebRTC Video Call</h2>
+<h2>WebRTC Call</h2>
 
+<label for="mode">Choose mode:</label>
+<select id="mode">
+  <option value="video">Video + Audio</option>
+  <option value="audio">Audio Only</option>
+</select>
+<button id="startBtn">Start Call</button>
+
+<br />
 <video id="localVideo" autoplay muted playsinline></video>
 <video id="remoteVideo" autoplay playsinline></video>
 
-<br />
-<button id="startBtn">Start Call</button>
-
 <script>
   const startBtn = document.getElementById('startBtn');
+  const modeSelect = document.getElementById('mode');
   const localVideo = document.getElementById('localVideo');
   const remoteVideo = document.getElementById('remoteVideo');
 
@@ -40,28 +47,21 @@
     ]
   };
 
-  socket.onopen = () => console.log('WebSocket connected');
-  socket.onerror = (e) => console.error('WebSocket error', e);
-  socket.onclose = () => console.log('WebSocket closed');
-
   socket.onmessage = async ({ data }) => {
-    const message = JSON.parse(data);
+    const msg = JSON.parse(data);
 
-    if (message.offer) {
-      console.log('Received offer');
-      await pc.setRemoteDescription(new RTCSessionDescription(message.offer));
+    if (msg.offer) {
+      await pc.setRemoteDescription(new RTCSessionDescription(msg.offer));
       const answer = await pc.createAnswer();
       await pc.setLocalDescription(answer);
       socket.send(JSON.stringify({ answer }));
-    } else if (message.answer) {
-      console.log('Received answer');
-      await pc.setRemoteDescription(new RTCSessionDescription(message.answer));
-    } else if (message.candidate) {
-      console.log('Received ICE candidate');
+    } else if (msg.answer) {
+      await pc.setRemoteDescription(new RTCSessionDescription(msg.answer));
+    } else if (msg.candidate) {
       try {
-        await pc.addIceCandidate(new RTCIceCandidate(message.candidate));
+        await pc.addIceCandidate(new RTCIceCandidate(msg.candidate));
       } catch (e) {
-        console.error('Error adding received ICE candidate', e);
+        console.error('ICE candidate error:', e);
       }
     }
   };
@@ -69,32 +69,41 @@
   function createPeerConnection() {
     pc = new RTCPeerConnection(config);
 
-    pc.onicecandidate = event => {
+    pc.onicecandidate = (event) => {
       if (event.candidate) {
-        console.log('Sending ICE candidate', event.candidate);
         socket.send(JSON.stringify({ candidate: event.candidate }));
       }
     };
 
-    pc.ontrack = event => {
-      console.log('Received remote track');
+    pc.ontrack = (event) => {
       remoteVideo.srcObject = event.streams[0];
     };
   }
 
   startBtn.onclick = async () => {
+    const mode = modeSelect.value;
     startBtn.disabled = true;
 
-    localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-    localVideo.srcObject = localStream;
+    const constraints = mode === 'audio'
+      ? { audio: true, video: false }
+      : { audio: true, video: true };
 
-    createPeerConnection();
+    try {
+      localStream = await navigator.mediaDevices.getUserMedia(constraints);
+      if (mode === 'video') {
+        localVideo.srcObject = localStream;
+      }
 
-    localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
+      createPeerConnection();
+      localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
 
-    const offer = await pc.createOffer();
-    await pc.setLocalDescription(offer);
-    socket.send(JSON.stringify({ offer }));
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+      socket.send(JSON.stringify({ offer }));
+    } catch (err) {
+      alert('Error accessing media devices.');
+      console.error(err);
+    }
   };
 </script>
 
